--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description"
     content="Data Scientist Portfolio - Expertise in Machine Learning, Data Analysis, and AI Solutions">
   <meta name="keywords" content="data science, machine learning, AI, python, data analysis, deep learning">
+  <base href="/SPGPortfolio/">
   <title>Sai Pratyusha Gorapalli</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css">
