Add Predictive Viability Check project card
Added a new project card for the Predictive Viability Check, detailing its purpose and associated tags.

--- a/projects.html
+++ b/projects.html
@@ -475,6 +475,22 @@
 
     </div>
   </section>
+  
+   <!-- Predictive Viability Check -->
+<div class="project-card">
+  <img src="./p6.png">
+  <div class="project-content">
+    <h3>Predictive Viability Check (Pre-Modeling Feasibility)</h3>
+    <p>A practical framework to assess data quality, leakage risk, stability/drift, and modeling feasibility before building ML.</p>
+    <div class="project-tags">
+      <span>Python</span><span>EDA</span><span>Data Quality</span><span>Leakage</span><span>Drift</span><span>Governance</span>
+    </div>
+  </div>
+  <div class="project-footer">
+    <span class="project-link" onclick="openModal('predictiveViability')"><i class="fab fa-github"></i> View
+      Project</span>
+  </div>
+</div>
 
 
   <!-- RESEARCH SECTION -->
