Add 'Predictive Viability Check' project details
Added a new project entry for 'Predictive Viability Check' with details on its purpose, technologies used, approach, results, and GitHub link.

--- a/projects.html
+++ b/projects.html
@@ -619,6 +619,25 @@
         github: "https://github.com/Pratyusha108/COVID-19-MORTALITY-RATE-PREDICTION-ANALYSIS-USING-PYTHON"
       },
 
+      predictiveViability: {
+  title: "Predictive Viability Check (Pre-Modeling Feasibility)",
+  img: "./p6.png",
+  desc: "A pre-modeling analytics framework to evaluate whether a dataset is suitable, safe, and stable enough for machine learning before any model is built.",
+  tech: "Python, Pandas, NumPy, Matplotlib, Scikit-learn",
+  approach: `
+    • Performed data quality assessment (missingness, duplicates, outliers)
+    • Checked target and temporal leakage risks prior to modeling
+    • Evaluated feature stability and distribution drift indicators
+    • Assessed signal strength and predictive feasibility before ML investment
+    • Designed a structured go / no-go decision framework
+    This approach mirrors industry best practices used to prevent wasted modeling effort and governance risk.
+  `,
+  result: "Enabled early identification of data risks, leakage issues, and low-signal datasets—helping avoid unreliable models and ensuring only viable datasets proceed to ML development.",
+  tags: ["Python", "EDA", "Data Quality", "Leakage", "Drift", "Governance"],
+  github: "https://github.com/Pratyusha108/predictive-viability-check"
+},
+
+
       mortgageAnalytics: {
         title: "Mortgage Payback Analytics",
         img: "./p3.webp",
